--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -80,6 +80,8 @@
     </div>
 
 </body>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/javascripts/socket.js"></script>
 <script src="/javascripts/logout.js"></script>
 <script src="/javascripts/addUser.js"></script>
 
