--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -35,6 +35,7 @@
         <div class="firstinnerdiv">
             <img src="/images/OpenTalkLogo.png" alt="logo">
             <div class="optionlist">
+                <a href="#" class="option"><i class="ri-map-pin-user-line"></i></a>
                 <a href="/home" class="option"><i class="ri-group-2-line friends"></i></a>
                 <a href="/addUser" style="color: rgb(255, 102, 6);" class="option"><i class="ri-user-add-line adduser"></i></a>
                 <a href="/group" class="option"><i class="ri-team-line group"></i></a>
@@ -47,8 +48,8 @@
                 <h2>Add Friends</h2>
                 <hr>
                 <h4>Member Username</h4>
-                <form id="form" action="/addUser">
-                    <input id="input" name="search" type="text" autocomplete="off" placeholder="Enter Username">
+                <form id="formAddUser" action="/addUser">
+                    <input id="inputAddUser" name="search" type="text" autocomplete="off" placeholder="Enter Username">
                     <button class="submitBtn" type="submit">Search <i class="ri-search-2-line"></i></button>
                 </form>
                 <hr>
