--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,6 +29,7 @@
             <div class="firstinnerdiv">
                 <img src="/images/OpenTalkLogo.png" alt="logo">
                 <div class="optionlist">
+                    <a href="#" class="option"><i class="ri-map-pin-user-line"></i></a>
                     <a href="/home" style="color: rgb(255, 102, 6);" class="option"><i
                             class="ri-group-2-line friends"></i></a>
                     <a href="/addUser" class="option"><i class="ri-user-add-line adduser"></i></a>
@@ -74,7 +75,7 @@
         </div>
         <div class="emptySecondDiv">
             <img src="/images/hiddenLogo.png">
-            <h3>Welcome To OpenTalk</h3>
+            <h3>Select a user to start messaging</h3>
         </div>
         <div class="seconddiv hide">
             <div class="thirdinnerdiv">
