--- a/views/group.ejs
+++ b/views/group.ejs
@@ -28,6 +28,7 @@
             <div class="firstinnerdiv">
                 <img src="/images/OpenTalkLogo.png" alt="logo">
                 <div class="optionlist">
+                    <a href="#" class="option"><i class="ri-map-pin-user-line"></i></a>
                     <a href="/home" class="option"><i class="ri-group-2-line friends"></i></a>
                     <a href="/addUser" class="option"><i class="ri-user-add-line adduser"></i></a>
                     <a href="/group" style="color: rgb(255, 102, 6);" class="option"><i class="ri-team-line group"></i></a>
@@ -41,9 +42,10 @@
                     <div class="search">
                         <input type="text" placeholder="Search group">
                         <i class="fa-solid fa-users"></i>
+                        <button class="searchBtn" type="submit"><i class="ri-search-line"></i></button>
                     </div>
 
-                    <a href=""><i class="ri-search-line"></i></a>
+                   
                 </div>
                 <div class="friendlistbox">
                     <p>GROUPLIST</p>
