--- a/views/group.ejs
+++ b/views/group.ejs
@@ -28,7 +28,7 @@
             <div class="firstinnerdiv">
                 <img src="/images/OpenTalkLogo.png" alt="logo">
                 <div class="optionlist">
-                    <a href="#" class="option"><i class="ri-map-pin-user-line"></i></a>
+                    <a href="/profile" class="option"><i class="ri-map-pin-user-line"></i></a>
                     <a href="/home" class="option"><i class="ri-group-2-line friends"></i></a>
                     <a href="/addUser" class="option"><i class="ri-user-add-line adduser"></i></a>
                     <a href="/group" style="color: rgb(255, 102, 6);" class="option"><i class="ri-team-line group"></i></a>
