added messaging in global chat

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -83,7 +83,7 @@ body{
     padding:15px;
 }
 
-#form{
+#globalForm{
     width:100%;
     height:40px;
     background-color:#E1E3E8;
@@ -92,7 +92,7 @@ body{
     border-radius: 20px;
     align-items: center;
 }
-#form>#input{
+#globalForm>#globalInput{
     width:90%;
     height:40px;
     background-color: transparent;
@@ -105,7 +105,7 @@ body{
     overflow: hidden;
 }
 
-#form>button{
+#globalForm>button{
     width:40px;
     height:40px;
     font-size: 24px;
@@ -115,7 +115,7 @@ body{
     background-color: #FF6606;
 }
 
-#messagediv{
+#globalMessagediv{
     padding:10px 10px;
     width:100%;
     height:100%;
@@ -231,4 +231,39 @@ body{
 }
 .user1>.description{
     font-size:11px;
+}
+.mymessage{
+    width:100%;
+    display: flex;
+    justify-content:flex-start ;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
+
+}
+.mymessage>span{
+    padding:4px 10px;
+    background-color: #FF6606;
+    border-radius: 20px;
+    border-top-left-radius:0px;
+    color:white;
+    font-size: 20px;
+    max-width: 100%;
+}
+.othermessage{
+
+    width:100%;
+    display: flex;
+    justify-content:flex-end;
+    overflow-wrap: break-word;
+    white-space: pre-wrap;
+    
+}
+.othermessage>span{
+    padding:4px 10px;
+    background-color: #000000;
+    border-radius: 20px;
+    border-top-right-radius:0px;
+    color:white;
+    font-size: 20px;
+    max-width: 100%;
 }
