--- a/views/global.ejs
+++ b/views/global.ejs
@@ -31,11 +31,11 @@
                 <button class="logout"><i class="ri-logout-box-line"></i></button>
             </div>
             <div class="secondinnerdiv">
-                <div id="messagediv">
+                <div id="globalMessagediv">
                 </div>
                 
-                    <form id="form" action="">
-                        <textarea id="input"  placeholder="Enter your Message"></textarea>
+                    <form id="globalForm" username="<%=username%>" action="">
+                        <textarea id="globalInput"  placeholder="Enter your Message"></textarea>
                         <button type="submit"><i class="ri-arrow-right-up-line"></i></button>
                     </form>
             </div>
