--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -9,6 +9,7 @@ body{
     width:100%;
     height:100vh;
     
+    
 }
 .maindiv{
     padding:25px;
@@ -127,6 +128,7 @@ body{
     background-color:#E1E3E8;
     border-radius: 10px;
     gap:2px;
+    scroll-behavior: smooth;
 }
 
 
