--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -271,8 +271,7 @@ body{
     border-radius: 20px;
     border-top-right-radius:0px;
     color:white;
-     display: flex;/*
-    align-items: flex-end;*/
+     display: flex;
     flex-direction: column; 
     font-size: 20px;
     max-width: 90%;
