--- a/views/global.ejs
+++ b/views/global.ejs
@@ -70,6 +70,6 @@
     </div>
 </body>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/javascripts/socket.js"></script>
+<script src="/javascripts/global.js"></script>
 <script src="/javascripts/logout.js"></script>
 </html>
