--- a/views/group.ejs
+++ b/views/group.ejs
@@ -111,7 +111,7 @@
     </div>
 </body>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/javascripts/socket.js"></script>
+<script src="/javascripts/group.js"></script>
 <script src="/javascripts/logout.js"></script>
 
 </html>
