--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -120,16 +120,18 @@ body{
     min-width:150px;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
-    
-    background-color: blue;
     margin-left: 40px;
-    background: url(../images/profile.png);
-    background-position: center;
-    background-size: cover;
     position: relative;
     border: 2px solid #FF6606;
-
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.profileImageCircle img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
 }
 .editBtn{
     width:17%;
