--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -49,11 +49,7 @@
             </div>
             <div class="secondinnerdiv">
                 <div class="backgroundImage">
-                    <div class="editImgBtn">
-                        <i class="ri-pencil-fill"></i>
-                        <p>Edit</p>
-
-                    </div>
+                    <div class="mainlogo">OpenTalk</div>
                 </div>
                 <div class="lineDiv">
                     <div class="profileImageCircle" >
@@ -62,6 +58,11 @@
                     </div>
                 </div>
                 <div class="detailsDiv">
+                    <div class="editImgBtn">
+                        <i class="ri-pencil-fill"></i>
+                        <p>Edit</p>
+
+                    </div>
                     <div class="userAbout">
                         <div class="userName">
                             <h2><%=fullname%></h2>
