--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -226,9 +226,19 @@ body{
   background: #FF6606;
   border-radius:0px;
 }
-.user1>.profile{
-    width:35px;
+.profile{
     height:35px;
+    width:35px;
+    background-color:  #B1B1B1;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    border: 1px solid #ffffff;
+}
+.profile img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 50%;
 }
 .user1>.description{
