--- a/public/stylesheets/homeAndGroup.css
+++ b/public/stylesheets/homeAndGroup.css
@@ -191,18 +191,18 @@ body{
 .profile{
     height:40px;
     width:40px;
-    background-color: #ababab;
+    background-color:  #B1B1B1;
     border-radius: 50%;
     position: relative;
     display: flex;
     justify-content: center;
     
 }
-.profile .fa-user{
-    color: #ffffff;
-    font-size: 30px;
-    position: absolute;
-    bottom: 0px;
+.profile img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 /* //////////////////////////////////// */
