--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -52,7 +52,7 @@
                     <div class="mainlogo">OpenTalk</div>
                 </div>
                 <div class="lineDiv">
-                    <div class="profileImageCircle" >
+                    <div class="profileImageCircle">
                         <img src="/images/uploads/<%=profileImage%>">
                         <button id="uploadButton" class="editBtn"><i class="ri-pencil-fill"></i></button>
                     </div>
@@ -65,13 +65,16 @@
                     </div>
                     <div class="userAbout">
                         <div class="userName">
-                            <h2><%=fullname%></h2>
-                            <div class="friendTag"><%=noOfFrds%> Friends</div>
+                            <h2>
+                                <%=fullname%>
+                            </h2>
+                            <div class="friendTag">
+                                <%=noOfFrds%> Friends
+                            </div>
                         </div>
                         <h4>@<%=username%></h4>
-                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A esse nesciunt
-                            quasi debitis praesentium dicta mollitia incidunt reprehenderit quia, quibusdam vel. Unde ab
-                            non in pariatur ex aliquid atque alias!</p>
+
+                        <textarea class="description" placeholder="Enter your Description"></textarea>
                     </div>
                 </div>
 
