--- a/views/global.ejs
+++ b/views/global.ejs
@@ -55,7 +55,8 @@
                 <div class="onlineusers">
                     <% for (let user of onlineUsersList) {%>
                     <div class="user1">
-                        <div class="profile" >
+                        <!-- Updated -->
+                        <div class="profile" >    
                             <img src="/images/uploads/<%=user.profileImage%>">
                         </div>
                         <div class="description">
