--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -116,6 +116,7 @@ body{
     border-radius: 40px;
     font-size: small;
     border:2px solid rgb(208, 208, 208);
+    cursor: pointer;
 }
 .lineDiv{
     width:100%;
@@ -194,5 +195,18 @@ body{
     margin-top: 20px;
     font-size: large;
     width: 100%;
+    resize: none;
     border: none;
+    color: #000000;
+    border-radius: 10px;
+    padding: 10px 5px;
+}
+.border{
+    border: 2px solid #FF6606;
+}
+.show{
+    display: block;
+}
+.hide{
+    display: none;
 }
