--- a/views/home.ejs
+++ b/views/home.ejs
@@ -81,14 +81,14 @@
         <div class="seconddiv hide">
             <div class="thirdinnerdiv">
                 <div class="selecteduser">
-                    <div class="selecteduserprofile"></div>
+                    <div class="selecteduserprofile"><img ></div>
                     <div class="selecteduserdetails">
                         <h4></h4>
                         <p></p>
                     </div>
 
                 </div>
-                <a class="menu" href="#"><i class="ri-menu-line"></i></a>
+                <a class="menu"><i class="ri-menu-line"></i></a>
 
             </div>
             <div class="fourthinnerdiv">
