--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -83,6 +83,7 @@ body{
     z-index: 0;
 }
 .backgroundImage{
+    position: relative;
     width: 100%;
     padding: 5px;
     background: url(../images/profilebg.jpg);
@@ -128,6 +129,7 @@ body{
 .profileImageCircle{
     width:15vw;
     min-width:150px;
+    max-width: 200px;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
     margin-left: 40px;
@@ -209,4 +211,27 @@ body{
 }
 .hide{
     display: none;
+}
+
+.return {
+    
+    position: absolute;
+    width:30px;
+    height:30px;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    background-color: rgba(240, 248, 255, 0);
+    border-radius: 40%;
+
+    display: flex;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.returnIcon{
+    color: #dbd9d9;
+    font-weight: 400;
+   
 }
