--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family:   Calibri, 'Trebuchet MS', sans-serif;
 }
 body{
     height: 100vh;
@@ -9,7 +10,7 @@ body{
 }
 .maindiv{
     width:100%;
-    padding:5px;
+    padding:8px;
     background-color:#FF6606;
     height:100%;
 }
@@ -19,6 +20,7 @@ body{
     display: flex;
     flex-direction: column;
     gap:4px;
+    
     
     
 }
@@ -37,6 +39,7 @@ body{
     max-width:40px;
 }
 .secondinnerdiv{
+   
     width:100%;
     height: calc(100% - 64px);
     background-color: #000000;
@@ -46,6 +49,9 @@ body{
     display: flex;
     flex-direction: column;
     gap:4px;
+   
+    
+    
 }
 .optionlist{
     display: flex;
@@ -184,4 +190,179 @@ body{
     align-items: center;
     flex-wrap: wrap;
     gap:15px;
+}
+.seconddiv{
+    
+    height: calc(100% - 64px);
+    width:100%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    
+    
+    
+}
+.thirdinnerdiv{
+    padding:0px 10px;
+    padding-right: 18px;
+    width:100%;
+    height:65px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    color:rgb(0, 0, 0);
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid rgb(255, 255, 255);
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    justify-content: space-between;
+}
+.selecteduser{
+    
+    height:100%;
+    background-color: rgba(127, 255, 212, 0);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    
+}
+.selecteduserprofile{
+    width:50px;
+    height:50px;
+    background-color: blue;
+    border-radius: 50%;
+}
+.selecteduserdetails>p{
+    font-size: 12px;
+}
+.menu{
+    text-decoration: none;
+    width:30px;
+    height:30px;
+    color: #a2a2a2;
+    font-size:20px;
+    background-color: #f4f4f4;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.fourthinnerdiv{
+   
+    width:100%;
+    height:calc(100% - 65px);
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    padding:10px ;
+    display: flex;
+    gap:10px;
+    flex-direction: column;
+    justify-content: space-between;
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+}
+#homeForm{
+    width:100%;
+    height:40px;
+    background-color:#E1E3E8;
+    display: flex;
+    justify-content:space-between;
+    border-radius: 20px;
+    align-items: center;
+}
+#homeForm>#homeInput{
+    width:90%;
+    height:40px;
+    background-color: transparent;
+    border:2px solid grey;
+    border-radius: 20px;
+    padding:0px 25px;
+    color: #000000;
+    resize: none;
+    padding-top: 10px;
+    overflow: hidden;
+}
+#homeForm>button{
+    width:40px;
+    height:40px;
+    font-size: 24px;
+    border-radius: 50%;
+    cursor: pointer;
+    border:none;
+    color: white;
+    background-color: #FF6606;
+}
+#homeMessagediv{
+    padding:10px 10px;
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    height:100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    overflow-wrap: normal;
+
+    background-color:#E1E3E8;
+    border-radius: 10px;
+    gap:2px;
+    scroll-behavior: smooth;
+}
+.mymessage{
+    width:100%;
+    display: flex;
+    justify-content:flex-start ;
+    overflow-wrap: break-word;
+}
+.mymessage>span{
+    padding:5px 10px;
+    background-color: #FF6606;
+    border-radius: 20px;
+    border-top-left-radius:0px;
+    color:white;
+    font-size: 20px;
+    max-width: 90%;
+    line-height: 19px;
+    white-space: pre-wrap;
+}
+.mymessage>span>.mynametag{
+    font-size: 12px;
+    font-family:'Segoe UI';
+    font-weight: 500;
+    color:black;
+}
+.othermessage{
+
+    width:100%;
+    display: flex;
+    justify-content:flex-end;
+    overflow-wrap: break-word;
+    
+}
+.othermessage>span{
+    padding:5px 10px;
+    background-color: #000000;
+    border-radius: 20px;
+    border-top-right-radius:0px;
+    color:white;
+    display: flex;
+    flex-direction: column; 
+    font-size: 20px;
+    max-width: 90%;
+    line-height: 19px;
+    white-space: pre-wrap;
+}
+.othermessage>span>.othernametag{
+    font-size: 12px;
+    font-family:'Segoe UI';
+    font-weight: 500;
+    color:#FF6606;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.newshow{
+    display:flex;
+}
+.newhide{
+    display:none;
 }
