--- a/public/stylesheets/addUser.css
+++ b/public/stylesheets/addUser.css
@@ -74,6 +74,7 @@ body{
     border-radius: 10px;
     background-color: #ed630d;
     display: flex;
+    gap:5px;
     justify-content: center;
     align-items: center;
 }
@@ -196,4 +197,99 @@ li{
     width: 366.6px;
     height: 340px;
     object-fit: cover;
+}
+
+
+.receivedrequests{
+    height: 550px;
+    width: 290px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 0px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.receivedrequests>hr{
+    margin-bottom: 10px;
+    margin-top: 15px;
+    border: none;
+    border-bottom:1px solid rgb(184, 184, 184);
+}
+.requestsdiv{
+    width:100%;
+    scrollbar-width: none;
+    height:calc(100% - 50px);
+    overflow: auto;
+}
+.user1{
+    width:100%; 
+    background-color: rgb(255, 255, 255);
+    border-bottom: 1px solid rgb(206, 206, 206);
+    padding:7px 5px;
+    display: flex;
+    gap:10px;
+    align-items: center;
+}
+.userdetails{
+    width:100%;
+   height:80px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap:10px;
+    background-color: rgb(255, 255, 255);
+}
+.userarea{
+    background-color: rgba(0, 255, 255, 0);
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap:10px;
+}
+.buttons{
+    width:100%;
+    height:25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:10px;
+}
+
+.accept{
+    width:30%;
+    height:25px;
+    border:none;
+    border-radius: 10px;
+    background-color: green;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:7px;
+    color:white;
+    font-size: 12px;
+}
+.reject{
+    width:30%;
+    height:25px;
+    border:none;
+    border-radius: 10px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:7px;
+    color:white;
+    font-size: 12px;
+    background-color: rgb(255, 0, 0);
+}
+.norequests{
+    width:100%;
+    height:calc(100% - 50px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.norequests>img{
+    width:200px;
 }
