--- a/public/stylesheets/logout.css
+++ b/public/stylesheets/logout.css
@@ -1,3 +1,5 @@
+
+
 .logoutContainer{
     display: none;
     background-color: rgb(255, 255, 255);
@@ -47,4 +49,10 @@
     border: none;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     color: white;
+}
+@media screen and (max-width :480px ) {
+    .logoutContainer{
+        width:320px;
+        top:50%;
+    }
 }
