--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -78,6 +78,143 @@
                         <%}%>
                 </ul>
             </div>
+            <div class="receivedrequests">
+                <h3>Received Requests</h3>
+                <hr>
+                <div class="requestsdiv">
+                    <!-- <div class="user1">
+                        <div class="userdetails">
+                            <div class="userarea">
+                                <div class="profile" >
+                                    <img src="">
+                                </div>
+                                <div class="description">
+                                    <h4>
+                                        James
+                                    </h4>
+                                    <p>
+                                        wanteb dev
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
+                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user1">
+                        <div class="userdetails">
+                            <div class="userarea">
+                                <div class="profile" >
+                                    <img src="">
+                                </div>
+                                <div class="description">
+                                    <h4>
+                                        James
+                                    </h4>
+                                    <p>
+                                        wanteb dev
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
+                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user1">
+                        <div class="userdetails">
+                            <div class="userarea">
+                                <div class="profile" >
+                                    <img src="">
+                                </div>
+                                <div class="description">
+                                    <h4>
+                                        James
+                                    </h4>
+                                    <p>
+                                        wanteb dev
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
+                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user1">
+                        <div class="userdetails">
+                            <div class="userarea">
+                                <div class="profile" >
+                                    <img src="">
+                                </div>
+                                <div class="description">
+                                    <h4>
+                                        James
+                                    </h4>
+                                    <p>
+                                        wanteb dev
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
+                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user1">
+                        <div class="userdetails">
+                            <div class="userarea">
+                                <div class="profile" >
+                                    <img src="">
+                                </div>
+                                <div class="description">
+                                    <h4>
+                                        James
+                                    </h4>
+                                    <p>
+                                        wanteb dev
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
+                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="user1">
+                        <div class="userdetails">
+                            <div class="userarea">
+                                <div class="profile" >
+                                    <img src="">
+                                </div>
+                                <div class="description">
+                                    <h4>
+                                        James
+                                    </h4>
+                                    <p>
+                                        wanteb dev
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="accept"><p>Accept</p><i class="ri-check-line"></i></button>
+                                <button class="reject"><p>Decline</p><i class="ri-close-line"></i></button>
+                            </div>
+                        </div>
+                    </div> -->
+                    <div class="norequests">
+                        <img src="/images/NoRequests.png" alt="">
+                    </div>
+                    
+                </div>
+
+            </div>
         </div>
     </div>
 
