--- a/public/stylesheets/home_mobile.css
+++ b/public/stylesheets/home_mobile.css
@@ -1,61 +1,68 @@
 *{
-    padding:0px;
-    margin:0px;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
     font-family:   Calibri, 'Trebuchet MS', sans-serif;
 }
-
 body{
-    width:100%;
-    height:100vh;
-    
+    height: 100vh;
+    width:100vw;
 }
 .maindiv{
-    padding:25px;
+    width:100%;
+    padding:8px;
+    background-color:#FF6606;
+    height:100%;
+}
+.firstdiv{
     width:100%;
     height:100%;
-    background-color:#E2E4E9;
     display: flex;
-    gap:5px;
-}
-
-.firstdiv{
-    height:100%;
-    width:40%;
-    border-radius: 10px;
-    background-color:#E2E4E9;
-    display: flex;
-    gap:5px;
+    flex-direction: column;
+    gap:4px;
+    
+    
+    
 }
 .firstinnerdiv{
-    min-width:80px;
-    height:100%;
-    background-color: rgb(0, 0, 0);
-    border-radius: 10px;
-    display:flex;
-    padding:20px 0px;
-    flex-direction: column;
-    justify-content: space-between;
+    padding: 0px 10px;
+    width:100%;
+    height:60px;
+    border-radius: 7px;
+    background-color: black;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+    
 }
 .firstinnerdiv>img{
-    max-width:45px;
+    max-width:40px;
+}
+.secondinnerdiv{
+   
+    width:100%;
+    height: calc(100% - 64px);
+    background-color: #000000;
+    border-radius: 7px;
+    overflow: hidden;
+    padding:4px;
+    display: flex;
+    flex-direction: column;
+    gap:4px;
+   
+    
+    
 }
 .optionlist{
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    gap:20px;
-    min-height: 195px;
+    gap:30px;
 }
-
 .option{
-    color:#ffffff;
-    font-size:24px;
     text-decoration: none;
-    transition: 0.3s;
-
+    color: white;
+    font-size: larger;
 }
 .option:hover{
     color: #FF6606;  
@@ -66,7 +73,7 @@ body{
     height:43px;
     cursor: pointer;
     text-decoration: none;
-    color: rgb(255, 102, 6);
+    color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -74,59 +81,55 @@ body{
     background-color: #000000;
     border: none;
 }
-.secondinnerdiv{
-    width:100%;
-    height:100%;
-    background-color: rgba(202, 21, 21, 0);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    gap:5px;
-    
-    
-    
-}
 .chatbox{
-    padding:0px 10px;
-    min-height:70px;
     width:100%;
+    height:60px;
     background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    color:rgb(0, 0, 0);
-    display:flex;
-    gap:10px;
+    display: flex;
     align-items: center;
-    justify-content:space-between;
-
+    justify-content: center;
+    gap:10px;
+    padding: 0px 10px;
+    border-radius: 7px;
 }
 .chatbox>h1{
     font-size: 30px;
 }
 .search{
     height:40px;
-    width:80%;
+    width:fit-content;
     position: relative;
     display: flex;
     gap:10px;
     align-items: center;
 
 }
-.chatbox>.search>input{
+.chatbox>.search>.inputdiv{
     height:100%;
-    width:85%;
+    width:fit-content;
     border-radius: 40px;
     border: none;
-    padding:0px 25px;
     color: #000000;
-    font-size: larger;
+    font-size: medium;
     background-color: transparent;
     border:2px solid grey;
+    position: relative;
     
     
 }
-.search>i{
+.inputdiv>input{
+    height:100%;
+    width: 100%;
+    border-radius:40px ;
+    border: none;
+    padding: 0px 25px;
+}
+
+.inputdiv>i{
     position: absolute;
-    right:75px;
+    right:30px;
+    top:50%;
+    transform: translateY(-50%);
     font-size: large;
     
     
@@ -145,28 +148,29 @@ body{
 }
 .searchBtn>i{
     font-size:24px;
-    
 }
 .friendlistbox{
     width:100%;
-    height:100%;
+    height:calc(100% - 64px);
     background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    padding:20px ;
-    padding-right: 10x;
-    overflow: hidden;
+    border-radius: 7px;
+    padding: 4px 7px;
+    display: flex;
+    flex-direction: column;
+    gap:2px;
 }
 .friendlistbox>p{
+    height:14px;
+    
     color:grey;
-    font-weight:700;
-    font-size: smaller;
+    font-weight:500;
+    font-size:14px;
 }
 .friendlist{
     width:100%;
-    background-color: rgb(255, 255, 255);
-    height: 98%;
-    padding-right: 5px;
+    height:calc(100% - 16px);
     overflow: auto;
+    
 }
 .user1{
     width:100%; 
@@ -187,7 +191,6 @@ body{
     flex-wrap: wrap;
     gap:15px;
 }
-
 .profile{
     height:40px;
     width:40px;
@@ -204,42 +207,28 @@ body{
     object-fit: cover;
     border-radius: 50%;
 }
-
-/* //////////////////////////////////// */
 .seconddiv{
-    height:100%;
-    display: flex;
-    gap:5px;
-    flex-direction: column;
-    width:60%;
+    
+    height: calc(100% - 64px);
+    width:100%;
     border-radius: 10px;
-    background-color: rgba(31, 36, 36, 0);
-}
-.emptySecondDiv{
-    height:100%;
-    width:60%;
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
-}
-.emptySecondDiv img{
-    height: 100px;
-    width: 100px;
-}
-.emptySecondDiv h3{
-    color: #ababab;
+    
 }
 .thirdinnerdiv{
-    padding:0px 20px;
+    padding:0px 10px;
+    padding-right: 18px;
     width:100%;
-    min-height:70px;
+    height:65px;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     color:rgb(0, 0, 0);
     display: flex;
     align-items: center;
+    border-bottom: 1px solid rgb(255, 255, 255);
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
     justify-content: space-between;
 }
 .selecteduser{
@@ -252,18 +241,17 @@ body{
     
 }
 .selecteduserprofile{
-    width:55px;
-    height:55px;
+    width:50px;
+    height:50px;
     border-radius: 50%;
-    border: 1px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color:#B1B1B1;
 }
 .selecteduserprofile img{
-    width:53px;
-    height:53px;
+    width:50px;
+    height:50px;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -272,22 +260,31 @@ body{
 }
 .menu{
     text-decoration: none;
-    color: #000000;
-    font-size:24px;
+    width:30px;
+    height:30px;
+    color: #a2a2a2;
+    font-size:20px;
+    background-color: #f4f4f4;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
 }
 .fourthinnerdiv{
+   
     width:100%;
-    height:calc(100% - 75px);
+    height:calc(100% - 65px);
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
-    padding:20px ;
+    padding:10px ;
     display: flex;
     gap:10px;
     flex-direction: column;
     justify-content: space-between;
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
 }
-
-
 #homeForm{
     width:100%;
     height:40px;
@@ -309,7 +306,6 @@ body{
     padding-top: 10px;
     overflow: hidden;
 }
-
 #homeForm>button{
     width:40px;
     height:40px;
@@ -320,7 +316,6 @@ body{
     color: white;
     background-color: #FF6606;
 }
-
 #homeMessagediv{
     padding:10px 10px;
     width:100%;
@@ -388,6 +383,13 @@ body{
     display: flex;
     justify-content: flex-end;
 }
+
+.newshow{
+    display:flex;
+}
+.newhide{
+    display:none;
+}
 .noUserFoundImage{
     width: 60%;
     object-fit: cover;
@@ -397,14 +399,6 @@ body{
     justify-content: center;
     align-items: center;
 }
-.clicked{
-    background-color: #E1E3E8;
-}
-.hide{
-    display: none;
-}
-
-
 
 
 .friendlist::-webkit-scrollbar {
